--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -33,7 +33,7 @@
 
             <tr>
                 <td class="content-cell">
-                    <p class="location">Thailand</p>
+                    <p class="location">pitratta</p>
                 </td>
             </tr>
 
